turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:15: error: type mismatch;
 found   : Array[Int]
 required: Int
var T = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:16: error: type mismatch;
 found   : Array[Int]
 required: Int
var U = new Array(Array[Int](2))
                            ^Turmite:17: error: not found: value T
var T(0)=(1,2,0,1,2,1)
    ^Turmite:18: error: not found: value T
var T(1)=(0,1,0,0,1,1)
    ^Turmite:19: error: not found: value U
var U(0)=(1,0);(2,1);(0,0)
    ^Turmite:20: error: not found: value U
var U(1)=(1,0);(2,1);(1,1)
    ^Turmite:65: error: not found: value x
  state = rule(state)(x)(2)
                      ^Turmite:72: error: not found: value init
		init();
                ^Turmite:99: error: ambiguous reference to overloaded definition,
both method step in class Turmite of type (colors: Array[java.awt.Color])Unit
and  method step in class Turmite of type (colors: Array[java.awt.Color])Unit
match argument types (Array[java.awt.Color])
			step(colors);
                        ^Turmite:55: error: method step is defined twice
  conflicting symbols both originated in file 'plm.runtime181.Turmite'
def step(colors:Array[Color] ) {
    ^